--- a/new.html
+++ b/new.html
@@ -21,10 +21,10 @@
   <body>
     <div class="container">
       <form>
-        <h1 id="h1"><center>EXPENCE TRACKER</center></h1>
+        <h1 id="h1"><center><strong>EXPENSE TRACKER</strong></center></h1>
         <br /><br />
         <label for="choose expence amount" class="form-label"
-          >Choose ExpenceAmount</label
+          ><strong>Expence Amount</strong></label
         >
         <input type="number" id="amount" class="form-control" /><br />
         <!-- <label for="choose a category" class="form-label"
@@ -38,12 +38,12 @@
           <option value="Cartoons">Cartoons</option>
           <option value="serials">Serials</option>
         </select>
-        <label for="choose description" class="form-label"
-          >Choose description</label
+        <label for="Select Description" class="form-label"
+          ><strong>Select Description</strong></label
         >
         <input type="text" id="description" class="form-control" /><br />
         <center>
-          <button class="btn btn-success btn-lg" id="submit-btn">ADD EXPENCES</button>
+          <button class="btn btn-outline-success btn-lg" id="submit-btn">ADD EXPENCES</button>
         </center>
         <br />
         <!-- <li id="list"></li> -->
